--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -13,6 +13,7 @@ body,
   background: $white;
   color: $blue;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 html {
